<resources>
    <string name="app_name">Kuis-Aji Bayu Permadi</string>
    <string name="nama_pelanggan">Nama Pelanggan</string>
    <string name="alamat_pelanggan">Alamat Pelanggan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pria">Pria</string>
    <string name="perempuan">Perempuan</string>
    <string name="tipe_pelanggan">Tipe Pelanggan</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="biasa">Biasa</string>
    <string name="android">Android</string>
    <string name="iphone">Iphone</string>
    <string name="winPhone">Windows Phone</string>
    <string name="procces">Procces</string>
    <string name="cancel">Cancel</string>
    <string name="jumlah_barang">Jumlah Barang</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="nota_transaksi">NOTA TRANSAKSI</string>
    <string name="tipe_member">Tipe Member :</string>
    <string name="hasil">***</string>
    <string name="namaPelanggan">Nama Pelanggan :</string>
    <string name="hasilPelanggan">Nama</string>
    <string name="gende">Gende</string>
    <string name="jenisKel">Jenis Kelamin :</string>
    <string name="alamatPela">Alamat Pelanggan :</string>
    <string name="alamat">Alamat</string>
    <string name="Namabar">Nama Barang :</string>
    <string name="barang">Barang</string>
    <string name="jumlah">Jumlah</string>
    <string name="hargaBar">Harga Barang</string>
    <string name="total_harga">Total Harga :</string>
    <string name="total">total</string>
    <string name="disc_harga">Disc. Harga :</string>
    <string name="diskon_harga">Diskon harga</string>
    <string name="disc_member">Disc. Member :</string>
    <string name="jumlahBar">Jumlah Barang :</string>
    <string name="totalSemua">Total</string>
    <string name="thanks">Terimakasih Sudah berbelanja di tempat kami</string>
    <string name="print">Print Nota</string>
    <string name="harga">Harga :</string>
</resources>