<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#3D89D6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:textSize="20dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/nota_transaksi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:text="@string/tipe_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_tpMember"
                android:hint="@string/hasil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>

    <TableLayout
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:text="@string/namaPelanggan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:hint="@string/hasilPelanggan"
                android:id="@+id/isiNamaP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/jenisKel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:hint="@string/gende"
                android:id="@+id/isiGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/alamatPela"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:hint="@string/alamat"
                android:id="@+id/isiAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/Namabar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:hint="@string/barang"
                android:id="@+id/isibarang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/jumlahBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:hint="@string/jumlah"
                android:id="@+id/jumlahBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
        <TextView
            android:text="@string/harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_marginLeft="10dp"
            android:hint="@string/hargaBar"
            android:id="@+id/isiHargabar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>
        <TableRow>
            <TextView
                android:text="@string/total_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:hint="@string/total"
                android:id="@+id/isiTotalHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/disc_harga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:hint="@string/diskon_harga"
                android:id="@+id/isDiskonHarga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/disc_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_marginLeft="10dp"
                android:hint="Diskon Member"
                android:id="@+id/isiDiscMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </TableRow><TableRow>
        <TextView
            android:text="@string/jumlahBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_marginLeft="10dp"
            android:hint="@string/totalSemua"
            android:id="@+id/isiTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </TableRow>

    </TableLayout>


    <TextView
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/thanks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/print_note"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:text="@string/print"
        android:layout_width="350dp"
        android:layout_height="wrap_content"/>

</LinearLayout>