<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#3D89D6"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etNamaP"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/nama_pelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etAlamatP"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/alamat_pelanggan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:id="@+id/tv_JenisKelamin"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:text="@string/jenis_kelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <RadioGroup
                android:id="@+id/rg_jeniskelamin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_marginLeft="50dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_marginTop="7dp"
                        android:id="@+id/pria"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pria" />

                    <RadioButton
                        android:layout_marginTop="7dp"
                        android:id="@+id/perempuan"
                        android:text="@string/perempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </TableRow>

            </RadioGroup>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <TextView
                android:layout_marginLeft="10dp"
                android:id="@+id/tv_tipePelanggan"
                android:text="@string/tipe_pelanggan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginLeft="50dp"
                android:id="@+id/namaBarang"
                android:text="@string/nama_barang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>

    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
            <RadioGroup
                android:layout_marginLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_gold"
                    android:text="@string/gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rb_silver"
                    android:text="@string/silver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rb_biasa"
                    android:text="@string/biasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rb_android"
                    android:layout_marginLeft="70dp"
                    android:text="@string/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rb_iphone"
                    android:layout_marginLeft="70dp"
                    android:text="@string/iphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RadioButton
                    android:id="@+id/rb_winPhon"
                    android:layout_marginLeft="70dp"
                    android:text="@string/winPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RadioGroup>

        </TableRow>
    </TableLayout>


    <EditText
        android:id="@+id/jmlhBarang"
        android:layout_marginLeft="10dp"
        android:hint="@string/jumlah_barang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>

            <Button
                android:onClick="tombolProcces"
                android:id="@+id/Btn_proces"
                android:layout_marginLeft="10dp"
                android:text="@string/procces"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_cancel"
                android:text="@string/cancel"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>

</LinearLayout>